--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=findbae.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   }
 }
