Defined token key, implemented user DTO, and updated login/register endpoints to return username and created token.

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=findbae.db"
   },
+  "TokenKey": "OLookMySuperSecretKeyIsCommittedToGithub",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
